Subindo index css, estrutura html e imagens.

--- a/Public/index.html
+++ b/Public/index.html
@@ -7,12 +7,32 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="\img\icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/Styles_index.css">
+  <link rel="stylesheet" href="/style/index.css">
   <link rel="stylesheet" href="css/reset.css">
   <title>Home Page - MG Game</title>
 </head>
 <body>
   <main>
+    <div class="container">
+      
+      <h1>MG GAME</h1>
+      <p class="text_homepage">
+        Se divirta com os amigos em nosso jogo de perguntas e respostas!
+      </p>
+
+      <h2>Menu</h2>
+      <div class="img_container">
+        <img src="/img/imagem1.jpg" alt="Imagem1">
+        <img src="/img/imagem2.jpg" alt="Imagem2">
+        <img src="/img/imagem3.jpg" alt="Imagem3">
+      </div>
+
+      <button class="btn_start_homepage">Start</button>
+
+      <div class="res_js">
+        <!--Trabalhar js - Área de teste js - Exibir, manipular elementos...-->
+      </div>
+    </div>
   </main>
   <script src="js\script.js"></script>
 </body>
