--- a/Public/index.html
+++ b/Public/index.html
@@ -34,6 +34,6 @@
       </div>
     </div>
   </main>
-  <script src="js\script.js"></script>
+  <script src="src\rodar_game.js" async></script>
 </body>
 </html>
