criando base formulário.

--- a/Public/Cadastrar_Game.html
+++ b/Public/Cadastrar_Game.html
@@ -7,10 +7,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/img/icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="/MG---Game/style/index.css">
+  <link rel="stylesheet" href="/MG---Game/style/cadastrar_game.css">
   <link rel="stylesheet" href="css/reset.css">
-  <title>Home Page - MG Game</title>
+  <title>Cadastrar Game - MG Game</title>
 </head>
-<body>
 
+<body>
+  <main>
+
+    <a href="index.html">Voltar</a>
+
+    <form action="" method="">
+      <h3>Cadastrar Jogo</h3>
+
+      <label for="nome">Nome do Jogo:</label><br>
+      <input type="text" name="nome" id="input_nome_game">
+      <br>
+      <label for="qtd_questao">Quantidade de perguntas:
+      <input type="text" name="qtd_questao" id="input_qtd_questao">
+      <input type="button" value="Gerar Perguntas">
+      
+      
+  </main>
 </body>
