Troca no import de fontes e mudança nos caminhos dos arquivos.

--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
         
         <a href="Cadastrar_Game.html" class="imagem" id="btn_Cadastrargame" data-text="Cadastrar Jogo"><img src="/MG---Game/img/new_game.jpg" alt="Cadastrar Jogo"></a>
         <a href="Rodar_Game.html" class="imagem" id="btn_Iniciargame" data-text="Iniciar Jogo"><img src="/MG---Game/img/start_game.jpeg" alt="Iniciar Jogo"></a>
-        <a href="Ver_game.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="/MG---Game/img/imagem3.jpg" alt="Demo"></a>
+        <a href="Rodar_Demo.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="/MG---Game/img/imagem3.jpg" alt="Demo"></a>
 
         <!--Os botões para levar a execução do script podem ser manipulados pelos id's:
           1. btn_Cadastrargame / Cadastrar o Jogo
