--- a/Public/Rodar_Demo.html
+++ b/Public/Rodar_Demo.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="\img\icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="demo_style.css">
+  <link rel="stylesheet" href="/MG---Game/style/demo_style.css">
   <link rel="stylesheet" href="css/reset.css">
   <title>Demo - MG Game</title>
 </head>
