--- a/Public/Rodar_Game_Demo.html
+++ b/Public/Rodar_Game_Demo.html
@@ -7,12 +7,27 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="\img\icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/Styles_index.css">
+  <link rel="stylesheet" href="/MG---Game/style/rodar_demo_style.css">
   <link rel="stylesheet" href="css/reset.css">
   <title>Home Page - MG Game</title>
 </head>
 <body>
   <main>
+    <div class="container">
+      <div class="questions-container hide">
+        <span class="question">Pergunte Aqui?</span>
+        <div class="answers-container">
+          <button class="answer button">Resposta 1</button>
+          <button class="answer button">Resposta 2</button>
+          <button class="answer button">Resposta 3</button>
+          <button class="answer button">Resposta 4</button>
+        </div>
+      </div>
+      <div class="controls-container">
+        <button class="start-quiz button">Começar Quiz!</button>
+        <button class="next-question button hide">Próxima pergunta</button>
+      </div>
+    </div>
   </main>
   <script src="js\script.js"></script>
 </body>
