--- a/Public/index.html
+++ b/Public/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/img/icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="/MG---Game/style/index.css">
+  <link rel="stylesheet" href="/style/index.css">
   <link rel="stylesheet" href="css/reset.css">
   <title>Home Page - MG Game</title>
 </head>
