--- a/Public/Cadastrar_Game.html
+++ b/Public/Cadastrar_Game.html
@@ -7,8 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/img/icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="/MG---Game/style/cadastrar_game.css">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="../style/cadastrar_game.css">
   <title>Cadastrar Game - MG Game</title>
 </head>
 
