--- a/Public/index.html
+++ b/Public/index.html
@@ -7,8 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/img/icone.png" type="image/x-icon">
-  <link rel="stylesheet" href="/style/index.css">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="../style/index.css">
   <title>Home Page - MG Game</title>
 </head>
 <body>
@@ -21,9 +20,9 @@
 
       <div class="img_container">
         
-        <a href="Cadastrar_Game.html" class="imagem" id="btn_Cadastrargame" data-text="Cadastrar Jogo"><img src="/MG---Game/img/new_game.jpg" alt="Cadastrar Jogo"></a>
-        <a href="Rodar_Game.html" class="imagem" id="btn_Iniciargame" data-text="Iniciar Jogo"><img src="/MG---Game/img/start_game.jpeg" alt="Iniciar Jogo"></a>
-        <a href="Rodar_Demo.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="/MG---Game/img/imagem3.jpg" alt="Demo"></a>
+        <a href="Cadastrar_Game.html" class="imagem" id="btn_Cadastrargame" data-text="Cadastrar Jogo"><img src="../img/new_game.jpg" alt="Cadastrar Jogo"></a>
+        <a href="Rodar_Game.html" class="imagem" id="btn_Iniciargame" data-text="Iniciar Jogo"><img src="../img/start_game.jpeg" alt="Iniciar Jogo"></a>
+        <a href="Form_Demo.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="../img/imagem3.jpg" alt="Demo"></a>
 
         <!--Os botões para levar a execução do script podem ser manipulados pelos id's:
           1. btn_Cadastrargame / Cadastrar o Jogo
