Alterando img e url.

--- a/Public/index.html
+++ b/Public/index.html
@@ -22,7 +22,7 @@
         
         <a href="Cadastrar_Game.html" class="imagem" id="btn_Cadastrargame" data-text="Cadastrar Jogo"><img src="../img/new_game.jpg" alt="Cadastrar Jogo"></a>
         <a href="Rodar_Game.html" class="imagem" id="btn_Iniciargame" data-text="Iniciar Jogo"><img src="../img/start_game.jpeg" alt="Iniciar Jogo"></a>
-        <a href="Form_Demo.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="../img/imagem3.jpg" alt="Demo"></a>
+        <a href="Rodar_Demo.html" class="imagem" id="btn_RodarDemo" data-text="Demo"><img src="../img/demo.png" alt="Demo"></a>
 
         <!--Os botões para levar a execução do script podem ser manipulados pelos id's:
           1. btn_Cadastrargame / Cadastrar o Jogo
