--- a/Public/Rodar_Demo.html
+++ b/Public/Rodar_Demo.html
@@ -14,12 +14,12 @@
   <main>
     <div class="container">
       <div class="questions-container hide">
-        <span class="questions">Pergunte Aqui?</span>
+        <span class="questions">Quiz da TI</span>
         <div class="answers-container">
-          <button class="answer button">Resposta 1</button>
-          <button class="answer button">Resposta 2</button>
-          <button class="answer button">Resposta 3</button>
-          <button class="answer button">Resposta 4</button>
+          <button class="answer button hide">Resposta 1</button>
+          <button class="answer button hide">Resposta 2</button>
+          <button class="answer button hide">Resposta 3</button>
+          <button class="answer button hide">Resposta 4</button>
         </div>
       </div>
       <div class="controls-container">
