--- a/Public/Rodar_Demo.html
+++ b/Public/Rodar_Demo.html
@@ -13,12 +13,9 @@
 <body>
   <main>
     <div class="container"> 
-        <span class="questions">Pergunte Aqui?</span> 
+        <span class="questions">Quiz da TI</span> 
       <div class="questions-container hide">
-<<<<<<< HEAD
-=======
-        <span class="questions">Quiz da TI</span>
->>>>>>> c16fba3e00cbe322fc536ed4c6e0264f15eb77a4
+        <span class="questions"></span>
         <div class="answers-container">
           <button class="answer button hide">Resposta 1</button>
           <button class="answer button hide">Resposta 2</button>
