Subindo logo e copy

--- a/Public/index.html
+++ b/Public/index.html
@@ -42,6 +42,14 @@
         </p>
       </section>
       
+      <section class="logo">  
+        <img src="../img/logo_beyond.jpeg" alt="Logo Beyond">
+      </section>
+
+      <section class="copy">
+        <p>&copy; by Beyond</p>
+      </section>
+      
       <div class="res_js">
         <!--Trabalhar js - Área de teste js - Exibir, manipular elementos...-->
       </div>
