--- a/Public/index.html
+++ b/Public/index.html
@@ -43,7 +43,7 @@
       </section>
       
       <section class="logo">  
-        <img src="../img/logo_beyond.jpeg" alt="Logo Beyond">
+        <img src="../img/logo_beyond.jpg" alt="Logo Beyond">
       </section>
 
       <section class="copy">
