--- a/Public/Rodar_Demo.html
+++ b/Public/Rodar_Demo.html
@@ -25,8 +25,8 @@
       
           <h2>Cadastrar Jogadores</h2>
     
-          <label for="pontos">Quantidade total de pontos:</label>
-          <input type="number" name="qtd_pontos" class="playerScore">
+          <label for="pontos" class="labelScore hide">Quantidade total de pontos:</label>
+          <input type="number" name="qtd_pontos" class="playerScore hide">
 
           <label for="nome">Nome dos jogadores:</label>
           <input type="text" name="nome_players" class="playerName">
